Improved css, divs are side by side

--- a/index.html
+++ b/index.html
@@ -2,8 +2,70 @@
 <html>
 <head>
 	<title>Instagram Sign in Page</title>
+	<link rel="stylesheet" type="text/css" href="CSS/index.css">
 </head>
 <body>
+	<!-- <h1>Page Layout Examples</h1>
+	<p>This is a block of text</p> -->
 
+	<section>
+		<div class="left">
+			<img src="images/instagram.jpg">
+		</div>
+	</section>
+	<section>
+		<div class="right">
+			<div>
+				<img width="200" height="70" src="images/instagram-logo.png">
+				<p>Sign up to see photos and videos from your friends.</p>
+			</div>
+			<div>
+				<img width="300" height="90" src="images/facebook-button.png">
+			</div>
+			<div>
+				<h5>------------ OR ------------</h5>
+			</div>
+			<div>
+				<form>
+					<input id="mobileEmail" name="mobileEmail" type="text" placeholder="Mobile Number or Email">
+					<input id="name" name="name" type="text" placeholder="Full Name">
+					<input id="Username" name="Username" type="text" placeholder="Username">
+					<input id="password" name="password" type="text" placeholder="Password">
+				</form>
+			</div>
+			<div class="signup">
+				<h2>Sign up</h2>
+			</div>
+			<div>
+				<p>By signing up, you agree to our Terms & Privacy Policy.</p>
+			</div>
+		</div>
+	</section>
+	<section>
+		<div class="login">
+			<p>Have an account? Log in</p>
+		</div>
+	</section>
+	<section>
+		<div class="logo">
+			<p>Get the app.</p>
+			<img src="images/appstore.png">
+			<img src="images/googleplay.png">
+		</div>
+	</section>
+	<section>
+		<nav>
+			<h6>ABOUT US </h6>
+			<h6>SUPPORT</h6>
+			<h6>BLOG </h6>
+			<h6>PRESS </h6>
+			<h6>API </h6>
+			<h6>JOBS</h6>
+			<h6>PRIVACY</h6>
+			<h6>TERMS</h6>
+			<h6>DIRECTORY</h6>
+			<h6>LANGUAGE</h6>
+		</nav>
+	</section>
 </body>
 </html>
