Improv css further, finished stages

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 		<div class="right">
 			<div>
 				<img width="200" height="70" src="images/instagram-logo.png">
-				<p>Sign up to see photos and videos from your friends.</p>
+				<p class="paragraph">Sign up to see photos and videos from your friends.</p>
 			</div>
 			<div>
 				<img width="300" height="90" src="images/facebook-button.png">
 			</div>
 			<div>
-				<h5>------------ OR ------------</h5>
+				<h5>---------------------------------- OR ----------------------------------</h5>
 			</div>
 			<div>
-				<form>
+				<form class="signform">
 					<input id="mobileEmail" name="mobileEmail" type="text" placeholder="Mobile Number or Email">
 					<input id="name" name="name" type="text" placeholder="Full Name">
 					<input id="Username" name="Username" type="text" placeholder="Username">
@@ -37,34 +37,37 @@
 				<h2>Sign up</h2>
 			</div>
 			<div>
-				<p>By signing up, you agree to our Terms & Privacy Policy.</p>
+				<p class="paragraph">By signing up, you agree to our Terms & Privacy Policy.</p>
 			</div>
 		</div>
+		<div class="clear"></div>
 	</section>
 	<section>
 		<div class="login">
 			<p>Have an account? Log in</p>
 		</div>
+		<div class="clear"></div>
 	</section>
 	<section>
 		<div class="logo">
-			<p>Get the app.</p>
+			<p class="apptext">Get the app.</p>
 			<img src="images/appstore.png">
 			<img src="images/googleplay.png">
 		</div>
+		<div class="clear"></div>
 	</section>
 	<section>
-		<nav>
-			<h6>ABOUT US </h6>
-			<h6>SUPPORT</h6>
-			<h6>BLOG </h6>
-			<h6>PRESS </h6>
-			<h6>API </h6>
-			<h6>JOBS</h6>
-			<h6>PRIVACY</h6>
-			<h6>TERMS</h6>
-			<h6>DIRECTORY</h6>
-			<h6>LANGUAGE</h6>
+		<nav class="navigation">
+			<h6 class="navbutton">ABOUT US </h6>
+			<h6 class="navbutton">SUPPORT</h6>
+			<h6 class="navbutton">BLOG </h6>
+			<h6 class="navbutton">PRESS </h6>
+			<h6 class="navbutton">API </h6>
+			<h6 class="navbutton">JOBS</h6>
+			<h6 class="navbutton">PRIVACY</h6>
+			<h6 class="navbutton">TERMS</h6>
+			<h6 class="navbutton">DIRECTORY</h6>
+			<h6 class="navbutton">LANGUAGE</h6>
 		</nav>
 	</section>
 </body>
