--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<img width="300" height="90" src="images/facebook-button.png">
 			</div>
 			<div>
-				<h5>---------------------------------- OR ----------------------------------</h5>
+				<h5>--------------------------- OR ---------------------------</h5>
 			</div>
 			<div>
 				<form class="signform">
@@ -58,16 +58,16 @@
 	</section>
 	<section>
 		<nav class="navigation">
-			<h6 class="navbutton">ABOUT US </h6>
-			<h6 class="navbutton">SUPPORT</h6>
-			<h6 class="navbutton">BLOG </h6>
-			<h6 class="navbutton">PRESS </h6>
-			<h6 class="navbutton">API </h6>
-			<h6 class="navbutton">JOBS</h6>
-			<h6 class="navbutton">PRIVACY</h6>
-			<h6 class="navbutton">TERMS</h6>
-			<h6 class="navbutton">DIRECTORY</h6>
-			<h6 class="navbutton">LANGUAGE</h6>
+			<a href="#" class="navbutton">ABOUT US </a>
+			<a href="#" class="navbutton">SUPPORT</a>
+			<a href="#" class="navbutton">BLOG </a>
+			<a href="#" class="navbutton">PRESS </a>
+			<a href="#" class="navbutton">API </a>
+			<a href="#" class="navbutton">JOBS</a>
+			<a href="#" class="navbutton">PRIVACY</a>
+			<a href="#" class="navbutton">TERMS</a>
+			<a href="#" class="navbutton">DIRECTORY</a>
+			<a href="#" class="navbutton">LANGUAGE</a>
 		</nav>
 	</section>
 </body>
